@@ -1,4 +1,8 @@
 2006-03-14  Alexander Malysh <amalysh at kannel.org>
+  * gwlib/octstr.c: Fixed #323.
+    Thanks to Rene Kluwen <rene.kluwen at chimit.nl> for provided patch.
+
+2006-03-14  Alexander Malysh <amalysh at kannel.org>
   * gw/heartbeat.c: fixed #320 that heartbeat_stop crashed when no heartbeat
     at all is activated.
     Thanks to Rene Kluwen <rene.kluwen at chimit.nl> for provided patch.
